--- a/DriversGalaxy/Views/PanelPaymentNeeded.xaml
+++ b/DriversGalaxy/Views/PanelPaymentNeeded.xaml
@@ -8,7 +8,7 @@
 			 xmlns:lex="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension"
              xmlns:my="clr-namespace:PopUpUtils;assembly=DriversGalaxy.Infrastructure"
 			 mc:Ignorable="d"
-			 d:DesignHeight="293"
+			 d:DesignHeight="399"
 			 d:DesignWidth="645"
 			 Height="576"
 			 Width="700"
@@ -24,7 +24,8 @@
             <RowDefinition Height="173" />
             <RowDefinition Height="15" />
 			<RowDefinition Height="58" />
-            <RowDefinition Height="61" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="31" />
 		</Grid.RowDefinitions>
         <Border Grid.Row="0"
                 Margin="0,19,0,0"
@@ -154,6 +155,14 @@
             <Button Style="{StaticResource TransparentButton}" Margin="0,10,0,0"
                     Command="{Binding EnterLicenseKeyCommand}"
                     Content="{lex:LocText DriversGalaxy:Resources:AlreadyHaveKey}"
+                    HorizontalAlignment="Center"                    
+                    Foreground="#b3b3b3">
+            </Button>
+        </Border>
+        <Border Grid.Row="6" Background="Transparent">
+            <Button Style="{StaticResource TransparentButton}" Margin="0,0,0,0"
+                    Command="{Binding CancelEnterLicenseKeyCommand}"
+                    Content="{lex:LocText DriversGalaxy:Resources:Cancel}"
                     HorizontalAlignment="Center"                    
                     Foreground="#b3b3b3">
             </Button>            
