Fixed following bug: "when run the program first time there is a crash"

--- a/DriversGalaxy/MainWindow.xaml
+++ b/DriversGalaxy/MainWindow.xaml
@@ -443,7 +443,8 @@
 						  HorizontalAlignment="Left"
 						  VerticalAlignment="Top">
 
-                        <views:PanelPreferences2 Loaded="ElementLoaded"											 
+                        <views:PanelPreferences2 x:Name="PanelPreferences2"
+                                             Loaded="ElementLoaded"											 
 											 HorizontalAlignment="Left"
 											 VerticalAlignment="Top" 
                                             />
