--- a/DriversGalaxy.OSMigrationTool.Backup/MainWindow.xaml
+++ b/DriversGalaxy.OSMigrationTool.Backup/MainWindow.xaml
@@ -10,7 +10,7 @@
 		Width="716"
 		Height="576"
 		Title="OS Migration Tool Backup"
-		SizeToContent="WidthAndHeight">
+		SizeToContent="WidthAndHeight" Icon="/DriversGalaxy.OSMigrationTool.Backup;component/DriverGalaxy.ico">
     <Window.Resources>
         <routine:PropertyEqualsToVisibilityConverter x:Key="PropertyEqualsToVisibilityConverter" />
         <routine:AnyPropertyEqualsToVisibilityConverter x:Key="AnyPropertyEqualsToVisibilityConverter" />
